<resources>
    <string name="app_name">HackathonApp2018</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="edit_message">Organization</string>
    <string name="button_save">Save</string>
    <string name="edit_text">Event</string>
    <string name="edit_location">Location</string>
    <string name="edit_description">Description</string>
</resources>
